--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,9 +13,10 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "fullstack-spring-react": "file:",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
